# vscode-python-tools-extension-template

./: LICENSE  README.md  SECURITY.md  SUPPORT.md  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
bundled/tool/: _debug_server.py  lsp_jsonrpc.py  lsp_runner.py  lsp_server.py  lsp_utils.py
src/: extension.ts
src/common/: server.ts
src/test/python_tests/: requirements.txt  test_server.py
